<?xml version="1.0" encoding="utf-8"?><!-- MainActivity -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="com.beomboo.mvvm.viewModel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.beomboo.mvvm.view.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginTop="55dp"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/cardview_dark_background"/>

            <!-- 이름 영역  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/userName"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text_field"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/form_username">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_text_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- ID 영역  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/userId"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/id_text_field"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/form_userId">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_text_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- PASS 영역  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/userPass"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pass_text_field"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/form_userPass">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pass_text_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- E-mail 영역  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/userEmail"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_text_field"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/form_userEmail">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_text_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/setRegisterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>