<?xml version="1.0" encoding="utf-8"?><!-- MainActivity -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="com.beomboo.mvvm.viewModel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.beomboo.mvvm.view.LoginActivity">
        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/confirm_area">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mainPage"
                android:textColor="@color/main_login_text"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/cardview_dark_background"
            app:layout_constraintTop_toBottomOf="@+id/title"/>

        <LinearLayout
            android:id="@+id/confirm_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="20dp"
            app:layout_constraintCircleRadius="50dp"
            android:orientation="vertical"
            android:background="@drawable/border_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <!-- 아이디 입력 영역  -->
            <LinearLayout
                android:id="@+id/id_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_login_text"
                    android:text="@string/userId" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/id_field"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColorHint="@color/main_login_text"
                    android:textColor="@color/main_login_text"
                    android:hint="@string/form_userId">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_background"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- 비밀번호 입력 영역  -->
            <LinearLayout
                android:id="@+id/pass_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/id_area">
                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_login_text"
                    android:text="@string/userPass" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pass_field"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColorHint="@color/main_login_text"
                    android:textColor="@color/main_login_text"
                    android:hint="@string/form_userPass">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pass_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_background"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/joinUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singinText"
            android:textColor="@color/main_hint_text"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_area"/>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>